<resources>
    <string name="app_name">Deals &amp; Business</string>
    <string name="welcomeMessage">Hello and welcome to\nSOSAChat</string>
    <string name="searchMessage">e.g: iPhone X, Galaxy S8 &#8230;</string>
    <string name="consumElec">Electronics</string>
    <string name="cars">Cars</string>
    <string name="latestItems">Latest Items</string>
    <string name="allCats">All Categories</string>
    <string name="moto">Buy&amp;Sell</string>
    <string name="menuHome">Home</string>
    <string name="menuExposeItem">Expose Item</string>
    <string name="menuTroque">Troque</string>
    <string name="menuHelpNCont">Help &amp; Contact</string>
    <string name="menuSettings">Settings</string>
    <string name="menuCatCars">@string/cars</string>
    <string name="menuCatElec">@string/consumElec</string>
    <string name="aboutSOS">About SOSAChat&#169;</string>
    <string name="hintNewItemName">Item name</string>
    <string name="hintNewItemDesc">Describe your item with clear details</string>
    <string name="aboutMessage">SOSAchat&#169; Beta version.\nDeveloped by Docta Rhyf.</string>
    <string name="menuMyAcc">My Account</string>
    <string name="qualBrandNew">Brand New</string>
    <string name="qualSecondHand">Second Hand</string>
    <string name="qualThirdHand">OK</string>
    <string name="notAvailable">N/A</string>
    <string name="choseCat">- Choose category -</string>
    <string name="choseQuality">- Choose quality -</string>
    <string name="txtAddNewItemPhotos">ADD MORE PICTURES</string>
    <string name="txtButtonPostItem">POST ITEM</string>
    <string name="msgClickToChangePic">Click on any picture to replace it with another one.</string>
    <string name="txtItemMainPic">TOUCH TO ADD PICTURE</string>
    <string name="currencyUSD">USD</string>
    <string name="currencyCDF">CDF</string>
    <string name="hintNewPrice">Item Price</string>
    <string name="menuWishList">Wish List</string>
    <string name="txAcceptTerms">Accept Terms&amp;Conditions</string>
    <string name="txtTermsNConds">Terms&amp;Conditions</string>
    <string name="msgPostItemFieldsIncomplete">Please fill in all the required fields</string>
    <string name="titleTermsAndCondition">Terms&amp;Conditions</string>
    <string name="msgTermAndCondDialog">You need to accept the Terms &amp; Conditions before you post an item.</string>
    <string name="btnReadTermsNconds">TERMS &amp; CONDITIONS</string>
    <string name="processing">Processing ...</string>
    <string name="msgEmptyFields">Empty fields!</string>
    <string name="msgNoRecentItems">Sorry there are no recent items posted today</string>
    <string name="menuReloadRecentItems">Reload Recent Items</string>
    <string name="msgRecentItemsLoaded">Recents Items Loaded</string>
    <string name="msgServerUnreachable">Sorry SOSAchat server unreachable!</string>
    <string name="msgNoNetworkTitle">NO INTERNET CONNECTION</string>
    <string name="txtBtnRetryConnecting">RETRY</string>
    <string name="msgStillNoConnection">Still no connection! Check WiFi or 3G data</string>
    <string name="msgErrorNoProdInType">Sorry this list is still empty for now, but you can be the first one to post something, or come by later to check if anyone as posted anything!</string>
    <string name="menProSortByLates">Sort by latest</string>
    <string name="menProSortByCheapest">Sort by cheapest</string>
    <string name="menProSortByQuality">Sort by quality</string>
    <string name="menuItemDetailsContactVendor">Contact Vendor</string>
    <string name="menuItemDetailsAddToWishList">Add to Wishlist</string>
    <string name="msgAccNotActive">Sorry you need first to activated your sos achat account, before you can contact the vendor</string>
    <string name="titleAccNotActive">Account Not Activate!</string>
    <string name="currencyToDiscuss">To discuss</string>
    <string name="search">Search</string>
    <string name="titleSettings">Settings</string>
    <string name="msgAbout">&#169; SOSAchat 2017. All rights reserved.</string>
    <string name="contactPhoneCall">Phone Call</string>
    <string name="contactSMS">SMS</string>
    <string name="contactSOSDM">SOS DM</string>
    <string name="contactEmail">Email</string>
    <string name="msgChooseYourPictureSource">Choose your picture source</string>
    <string name="sourceGallery">Gallery</string>
    <string name="sourceCamera">Camera</string>
    <string name="btnCancel">CANCEL</string>
    <string name="setLabelFullname">Full Name</string>
    <string name="accSettings">Account Settings</string>
    <string name="titleAccountActivation">Account Activation</string>
    <string name="setLabelEmail">Email</string>
    <string name="setLabelMobile">Mobile</string>
    <string name="setLabelCompany">Company</string>
    <string name="setLabelLocation">Location</string>
    <string name="txtNewItemName">Item Name</string>
    <string name="txtNewItemPrice">Item Pricing</string>
    <string name="txtNewItemCat">Item Category</string>
    <string name="txtNewItemQual">Item Quality</string>
    <string name="txtNewItemDesc">Item Description</string>
    <string name="qualOther">Other</string>
    <string name="strNA">N/A</string>
    <string name="txtNewItemAddMorePix">ADD MORE PICTURES</string>
    <string name="txtFeatCatOther">Other</string>
    <string name="menuCatOther">Other</string>
    <string name="btnOk">OK</string>
    <string name="setRowLabelAccStatus">Account Status</string>
    <string name="setRowLabelLastActivation">Last activation</string>
    <string name="setRowLabelTimeTillExpire">Time \'till expiration</string>
    <string name="setRowLabelExpiresOn">Expires On</string>
    <string name="msgAccountActivation">You can reactivation your accout with mpese, airtel money or orange money by following the guide below</string>
    <string name="menuLogout">Logout</string>
    <string name="menuViewAllProducts">View All Products</string>
    <string name="txtNewItemType">ITEM TYPE</string>
    <string name="btnTextDeleteAccount">DELETE MY ACCOUNT</string>
    <string name="btnTextUpdatePassword">UPDATE PASSWORD</string>
    <string name="setLabelRecentItemsAutoreflresh">Autorefresh Recent Items</string>
    <string name="menuAccSettins">Account Settings</string>
    <string name="txtErrorOldPassword">Your old password is not correct</string>
    <string name="txtErrorNewPasswords">New passwords dont match</string>
    <string name="tvErrorNewPasswordCharCheckFailed">The password should be minum 6 chars long</string>
    <string name="menuLookingFor">Looking for</string>
</resources>